docs/v0.2.0a56/_sources/reference/_autosummary/hpcflow.sdk.persistence.zarr.ZarrZipPersistentStore.rst.txt
hpcflow.sdk.persistence.zarr.ZarrZipPersistentStore
===================================================

.. currentmodule:: hpcflow.sdk.persistence.zarr

.. autoclass:: ZarrZipPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ZarrZipPersistentStore.add_EAR
      ~ZarrZipPersistentStore.add_element
      ~ZarrZipPersistentStore.add_element_iteration
      ~ZarrZipPersistentStore.add_element_set
      ~ZarrZipPersistentStore.add_file
      ~ZarrZipPersistentStore.add_loop
      ~ZarrZipPersistentStore.add_set_parameter
      ~ZarrZipPersistentStore.add_submission
      ~ZarrZipPersistentStore.add_submission_attempt
      ~ZarrZipPersistentStore.add_task
      ~ZarrZipPersistentStore.add_template_components
      ~ZarrZipPersistentStore.add_unset_parameter
      ~ZarrZipPersistentStore.cached_load
      ~ZarrZipPersistentStore.check_parameters_exist
      ~ZarrZipPersistentStore.copy
      ~ZarrZipPersistentStore.delete
      ~ZarrZipPersistentStore.delete_no_confirm
      ~ZarrZipPersistentStore.get_EAR_skipped
      ~ZarrZipPersistentStore.get_EARs
      ~ZarrZipPersistentStore.get_creation_info
      ~ZarrZipPersistentStore.get_element_iterations
      ~ZarrZipPersistentStore.get_elements
      ~ZarrZipPersistentStore.get_fs_path
      ~ZarrZipPersistentStore.get_loops
      ~ZarrZipPersistentStore.get_loops_by_IDs
      ~ZarrZipPersistentStore.get_parameter_set_statuses
      ~ZarrZipPersistentStore.get_parameter_sources
      ~ZarrZipPersistentStore.get_parameters
      ~ZarrZipPersistentStore.get_submissions
      ~ZarrZipPersistentStore.get_submissions_by_ID
      ~ZarrZipPersistentStore.get_task
      ~ZarrZipPersistentStore.get_task_elements
      ~ZarrZipPersistentStore.get_tasks
      ~ZarrZipPersistentStore.get_tasks_by_IDs
      ~ZarrZipPersistentStore.get_template
      ~ZarrZipPersistentStore.get_template_components
      ~ZarrZipPersistentStore.make_test_store_from_spec
      ~ZarrZipPersistentStore.prepare_test_store_from_spec
      ~ZarrZipPersistentStore.reinstate_replaced_dir
      ~ZarrZipPersistentStore.remove_path
      ~ZarrZipPersistentStore.remove_replaced_dir
      ~ZarrZipPersistentStore.rename_path
      ~ZarrZipPersistentStore.save
      ~ZarrZipPersistentStore.set_EAR_end
      ~ZarrZipPersistentStore.set_EAR_skip
      ~ZarrZipPersistentStore.set_EAR_start
      ~ZarrZipPersistentStore.set_EAR_submission_index
      ~ZarrZipPersistentStore.set_file
      ~ZarrZipPersistentStore.set_jobscript_job_ID
      ~ZarrZipPersistentStore.set_jobscript_submit_time
      ~ZarrZipPersistentStore.set_jobscript_version_info
      ~ZarrZipPersistentStore.set_parameter_value
      ~ZarrZipPersistentStore.to_zip
      ~ZarrZipPersistentStore.update_loop_num_iters
      ~ZarrZipPersistentStore.update_param_source
      ~ZarrZipPersistentStore.using_resource
      ~ZarrZipPersistentStore.write_empty_workflow
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZarrZipPersistentStore.has_pending
      ~ZarrZipPersistentStore.logger
      ~ZarrZipPersistentStore.ts_fmt
      ~ZarrZipPersistentStore.zarr_store
   
   