docs/v0.3.0a0/_sources/reference/_autosummary/hpcflow.sdk.persistence.zarr.ZarrZipPersistentStore.rst.txt
hpcflow.sdk.persistence.zarr.ZarrZipPersistentStore
===================================================

.. currentmodule:: hpcflow.sdk.persistence.zarr

.. autoclass:: ZarrZipPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ZarrZipPersistentStore.add_EAR
      ~ZarrZipPersistentStore.add_element
      ~ZarrZipPersistentStore.add_element_iteration
      ~ZarrZipPersistentStore.add_element_set
      ~ZarrZipPersistentStore.add_file
      ~ZarrZipPersistentStore.add_loop
      ~ZarrZipPersistentStore.add_set_parameter
      ~ZarrZipPersistentStore.add_submission
      ~ZarrZipPersistentStore.add_task
      ~ZarrZipPersistentStore.add_template_components
      ~ZarrZipPersistentStore.add_unset_parameter
      ~ZarrZipPersistentStore.cache_ctx
      ~ZarrZipPersistentStore.cached_load
      ~ZarrZipPersistentStore.check_parameters_exist
      ~ZarrZipPersistentStore.clear_jobscript_at_submit_metadata_cache
      ~ZarrZipPersistentStore.copy
      ~ZarrZipPersistentStore.delete
      ~ZarrZipPersistentStore.delete_no_confirm
      ~ZarrZipPersistentStore.get_EAR_skipped
      ~ZarrZipPersistentStore.get_EARs
      ~ZarrZipPersistentStore.get_creation_info
      ~ZarrZipPersistentStore.get_dirs_array
      ~ZarrZipPersistentStore.get_element_iterations
      ~ZarrZipPersistentStore.get_elements
      ~ZarrZipPersistentStore.get_jobscript_at_submit_metadata
      ~ZarrZipPersistentStore.get_jobscript_block_dependencies
      ~ZarrZipPersistentStore.get_jobscript_block_run_ID_array
      ~ZarrZipPersistentStore.get_jobscript_block_task_actions_array
      ~ZarrZipPersistentStore.get_jobscript_block_task_elements_map
      ~ZarrZipPersistentStore.get_loops
      ~ZarrZipPersistentStore.get_loops_by_IDs
      ~ZarrZipPersistentStore.get_name
      ~ZarrZipPersistentStore.get_parameter_set_statuses
      ~ZarrZipPersistentStore.get_parameter_sources
      ~ZarrZipPersistentStore.get_parameters
      ~ZarrZipPersistentStore.get_submission_at_submit_metadata
      ~ZarrZipPersistentStore.get_submissions
      ~ZarrZipPersistentStore.get_submissions_by_ID
      ~ZarrZipPersistentStore.get_task
      ~ZarrZipPersistentStore.get_task_elements
      ~ZarrZipPersistentStore.get_tasks
      ~ZarrZipPersistentStore.get_tasks_by_IDs
      ~ZarrZipPersistentStore.get_template
      ~ZarrZipPersistentStore.get_template_components
      ~ZarrZipPersistentStore.get_text_file
      ~ZarrZipPersistentStore.get_ts_fmt
      ~ZarrZipPersistentStore.get_ts_name_fmt
      ~ZarrZipPersistentStore.make_test_store_from_spec
      ~ZarrZipPersistentStore.parameters_metadata_cache
      ~ZarrZipPersistentStore.prepare_test_store_from_spec
      ~ZarrZipPersistentStore.rechunk_parameter_base
      ~ZarrZipPersistentStore.rechunk_runs
      ~ZarrZipPersistentStore.reinstate_replaced_dir
      ~ZarrZipPersistentStore.remove_path
      ~ZarrZipPersistentStore.remove_replaced_dir
      ~ZarrZipPersistentStore.rename_path
      ~ZarrZipPersistentStore.save
      ~ZarrZipPersistentStore.set_EAR_end
      ~ZarrZipPersistentStore.set_EAR_skip
      ~ZarrZipPersistentStore.set_EAR_start
      ~ZarrZipPersistentStore.set_EARs_initialised
      ~ZarrZipPersistentStore.set_file
      ~ZarrZipPersistentStore.set_jobscript_metadata
      ~ZarrZipPersistentStore.set_multi_run_ends
      ~ZarrZipPersistentStore.set_multi_run_starts
      ~ZarrZipPersistentStore.set_parameter_value
      ~ZarrZipPersistentStore.set_parameter_values
      ~ZarrZipPersistentStore.set_run_dirs
      ~ZarrZipPersistentStore.set_run_submission_data
      ~ZarrZipPersistentStore.unzip
      ~ZarrZipPersistentStore.update_at_submit_metadata
      ~ZarrZipPersistentStore.update_iter_data_indices
      ~ZarrZipPersistentStore.update_loop_num_iters
      ~ZarrZipPersistentStore.update_loop_parents
      ~ZarrZipPersistentStore.update_param_source
      ~ZarrZipPersistentStore.update_run_data_indices
      ~ZarrZipPersistentStore.using_resource
      ~ZarrZipPersistentStore.write_empty_workflow
      ~ZarrZipPersistentStore.zip
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZarrZipPersistentStore.EAR_cache
      ~ZarrZipPersistentStore.element_cache
      ~ZarrZipPersistentStore.element_iter_cache
      ~ZarrZipPersistentStore.has_pending
      ~ZarrZipPersistentStore.is_submittable
      ~ZarrZipPersistentStore.logger
      ~ZarrZipPersistentStore.num_EARs_cache
      ~ZarrZipPersistentStore.num_params_cache
      ~ZarrZipPersistentStore.num_tasks_cache
      ~ZarrZipPersistentStore.param_sources_cache
      ~ZarrZipPersistentStore.parameter_cache
      ~ZarrZipPersistentStore.task_cache
      ~ZarrZipPersistentStore.ts_fmt
      ~ZarrZipPersistentStore.use_cache
      ~ZarrZipPersistentStore.workflow
      ~ZarrZipPersistentStore.zarr_store
   
   